chore: I added some placeholder text to the search bar and I removed the overflow issue we were having on the search page

--- a/src/assets/styles/deleteAlert.scss
+++ b/src/assets/styles/deleteAlert.scss
@@ -5,7 +5,7 @@
     position: fixed;
     bottom: 30%;
     left: 50%;
-    transform: translate(-50%, 0);
+    /*transform: translate(-50%, 0);*/
 
     p {
         @include paragraph-medium;
