--- a/src/assets/styles/searchApplicants.scss
+++ b/src/assets/styles/searchApplicants.scss
@@ -2,6 +2,7 @@
 
 #search_applicant_wrapper {
     color: white;
+    overflow: hidden;
     h1 {
         @include large-header;
         color: white;
